- Fix vertical alignment of subject coulmn text (#1487091)

--- a/skins/default/mail.css
+++ b/skins/default/mail.css
@@ -832,6 +832,8 @@ body.messagelist
 #messagelist tbody tr td.subject a
 {
   cursor: default;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 /* thread parent message with unread children */
